--- a/branches/dev-issue-14/MyNightOut/src/mynightout/ui/MainFrame.form
+++ b/branches/dev-issue-14/MyNightOut/src/mynightout/ui/MainFrame.form
@@ -48,7 +48,7 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <Component id="UserHistoryShow" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="deleteButton" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -79,7 +79,7 @@
               <EmptySpace min="5" pref="5" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="deleteButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="UserHistoryShow" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="188" max="32767" attributes="0"/>
           </Group>
@@ -151,10 +151,13 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="UserHistoryShow">
       <Properties>
         <Property name="text" type="java.lang.String" value="UserHistory"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UserHistoryShowActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
